[package]
name = "rs_ws281x"
version = "0.2.0"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
license = "MIT"
description = "Wrapper for ws281x library using bindgen to track upstream"

[dependencies]

[build-dependencies]
bindgen = "0.37"
cc = "1.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
