[package]
name = "rs_ws281x"
version = "0.4.1"
authors = ["Joseph Murphy <air.jmurph@gmail.com>"]
license = "MIT"
description = "Wrapper for ws281x library using bindgen to track upstream"
repository = "https://github.com/rpi-ws281x/rpi-ws281x-rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
bindgen = { version = "0.54", default-features = true }
cc = "1.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
